# Aircraft_Performance

./: README.txt
Proj01/: CMakeLists.txt  README.md  config.json  instruction.md
Proj01/src/: class.cpp  proj01.cpp
Proj02/: CMakeLists.txt  README.md
Proj02/src/: main.cpp  proj02.cpp
Proj03/: CMakeLists.txt  README.txt
Proj03/src/: main.cpp
Proj04/: README.txt
Proj04/src/: main.cpp
Proj04/src/dynamics/: ControlInput.h  ForcesMoments.h  SixDofEOM.cpp  SixDofEOM.h  State6DOF.h
Proj04/src/env/: Atmosphere.h  Gravity.h  WindModel.h
Proj04/src/math/: Vec3.h
Proj04/src/model/: AerodynamicSurface.h  Aircraft.cpp  Aircraft.h  AircraftParams.h  Fuselage.h  Propulsion.h  Tail.h  Wing.h
Proj04/src/sim/: Simulation.h
Proj05/: CMakeLists.txt  README.txt
Proj05/src/: main.cpp
Proj05/src/dynamics/: ControlInput.h  ForcesMoments.h  SixDofEOM.cpp  SixDofEOM.h  State6DOF.h
Proj05/src/env/: Atmosphere.h  Gravity.h  WindModel.h
Proj05/src/math/: Mat3.h  Rotation.h  Vec3.h
Proj05/src/model/: AerodynamicSurface.h  Aircraft.cpp  Aircraft.h  AircraftParams.h  Fuselage.cpp  Fuselage.h  Propulsion.h  Tail.cpp  Tail.h  Wing.cpp  Wing.h
Proj05/src/sim/: Simulation.cpp  Simulation.h
Proj06/: README.txt  geminicode_test.py
Proj07/: CMakeLists.txt  README.txt
Proj07/src/: main.cpp
